3.3/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment-back
  namespace: app
  labels:
    app: netology-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netology-back
  template:
    metadata:
      labels:
        app: netology-back
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment-cache
  namespace: app
  labels:
    app: netology-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netology-cache
  template:
    metadata:
      labels:
        app: netology-cache
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8090

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment-front
  namespace: app
  labels:
    app: netology-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netology-front
  template:
    metadata:
      labels:
        app: netology-front
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
