3.3/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc-back
  namespace: app
spec:
  selector:
    app: netology-back
  ports:
    - name: multitool-http
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: netology-svc-cache
  namespace: app
spec:
  selector:
    app: netology-cache
  ports:
    - name: multitool-http
      protocol: TCP
      port: 8090
      targetPort: 8090

---
apiVersion: v1
kind: Service
metadata:
  name: netology-svc-front
  namespace: app
spec:
  selector:
    app: netology-front
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
