3.3/np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: netology-front
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: netology-back
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: netology-back

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: netology-back
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - {key: app, operator: In, values: [netology-front, netology-cache]}
  egress:
    - to:
        - podSelector:
            matchExpressions:
              - {key: app, operator: In, values: [netology-front, netology-cache]}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cache-network-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: netology-cache
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: netology-back
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: netology-back
